k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
spec:
  # using the selector, we will expose the running deployments
  # this is how Kubernetes knows, that a given service belongs to a deployment
  selector:
    matchLabels:
      app: localstack
  replicas: 1
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            # exposing dynamodb
            - containerPort: 31001
            # exposing sqs
            - containerPort: 31000
            # expsosing the localstack ui
            - containerPort: 32000
