k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
spec:
  # selector tells Kubernetes what Deployment this Service
  # belongs to
  selector:
    app: localstack
  ports:
    - port: 32000
      protocol: TCP
      name: ui
      nodePort: 32000
    - port: 31001
      protocol: TCP
      name: dynamodb
      nodePort: 31001
    - port: 31000
      protocol: TCP
      name: sqs
      nodePort: 31000
  type: LoadBalancer
